[package]
name = "LinuxCommandLibrary"
version = "0.1.2"
edition = "2024"

[dependencies]

actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
